--- a/assets/scss/objects/_explore-nav.scss
+++ b/assets/scss/objects/_explore-nav.scss
@@ -65,7 +65,7 @@
 }
 
 .explore-nav {
-   z-index: 0;
+   z-index: -1;
    position: fixed;
    top: 0;
    left: 0;
@@ -98,15 +98,6 @@
      line-height: 25vh;
    }
  }
-
-.touchevents .explore-nav {
-  position: absolute;
-}
-
-.touchevents .open--nav .explore-nav {
-  position: fixed;
-}
-
 
 .explore-nav a:hover {
   background: rgba(0,0,0,.15)!important;
